# serilib

./: .clang-format  .cmake-format.yaml  .editorconfig  .envrc  .gitignore  .yamlfmt  .yamllint  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.md  README.md  RELEASE.md  default.nix  flake.nix  shell.nix
.github/workflows/: cmake.yml  docs.yml  doxygen.yml  release.yml
cmake/: gcc-arm-none-eabi-m0+.cmake  gcc-arm-none-eabi-m3.cmake  gcc-arm-none-eabi-m4.cmake  gcc-arm-none-eabihf-m33.cmake  gcc-arm-none-eabihf-m4.cmake  gcc-arm-none-eabihf-m55-double.cmake  gcc-arm-none-eabihf-m55.cmake  gcc-arm-none-eabihf-m7-double.cmake  gcc-arm-none-eabihf-m7.cmake  gcc-arm-none-eabihf-m85-double.cmake  gcc-arm-none-eabihf-m85.cmake  gcc-riscv32-none-elf-esp32c3.cmake
docs/: .browserslistrc  Doxyfile  README.md
docs/manual/: book.toml
docs/manual/src/: SUMMARY.md  control.md  home.md  math.md  pid.md  steering.md
docs/root/: index.html  style.css
include/seri/: control.h  math.h  pid.h  steering.h
nix/: git-hooks.nix  package.nix  treefmt.nix
src/: CMakeLists.txt  math.c  pid.c  steering_crawler.c  steering_mechanum.c  steering_omni.c  stick.c
tools/: autoprefixer.nix  package.nix  treefmt.nix
tools/postcss-cli/: default.nix  enable-lock-file.patch  package-lock.json
